tests/transpiler/x/rs/in_operator_extended.rs
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:06 +0700
use std::collections::HashMap;
fn main() {
    let xs: Vec<i64> = vec![1, 2, 3];
    let ys: Vec<i64> = { let mut _q: Vec<i64> = Vec::new(); for x in xs { if ((x % 2) == 1) { _q.push(x); } } _q };
    println!("{}", if ys.contains(&1) { 1 } else { 0 });
    println!("{}", if ys.contains(&2) { 1 } else { 0 });
    let m = HashMap::from([(a, 1)]);
    println!("{}", if m.contains_key(&"a") { 1 } else { 0 });
    println!("{}", if m.contains_key(&"b") { 1 } else { 0 });
    let s = "hello";
    println!("{}", s.contains("ell"));
    println!("{}", s.contains("foo"));
}
